[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/NamePrompt.gd" type="Script" id=1]
[ext_resource path="res://fonts/Press_Start_2P/PressStart2P-Regular.ttf" type="FontFile" id=2]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/GUI_60.tres" type="FontFile" id=4]

[sub_resource type="FontFile" id=2]
size = 40
font_data = ExtResource( 2 )

[node name="NamePrompt" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="UI" type="Node2D" parent="."]

[node name="insert name" type="Label" parent="UI"]
offset_top = 395.0
offset_right = 576.0
offset_bottom = 478.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 4 )
text = "Please insert
your name:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="LineEdit" parent="UI/insert name"]
offset_top = 140.0
offset_right = 580.0
offset_bottom = 217.0
theme_override_fonts/font = SubResource( 2 )
align = 1
max_length = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="UI"]
offset_top = 896.0
offset_right = 580.0
offset_bottom = 996.0
focus_mode = 0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_hover_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_pressed_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 4 )
disabled = true
focus_mode = 0
text = "Submit!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delay" type="Timer" parent="UI/Submit"]
one_shot = true
autostart = true

[node name="Score" type="Label" parent="UI"]
offset_top = 156.0
offset_right = 576.0
offset_bottom = 196.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 4 )
text = "Score:0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="UI/insert name/name" to="." method="name_focus_entered"]
[connection signal="pressed" from="UI/Submit" to="." method="submit_pressed"]
[connection signal="timeout" from="UI/Submit/delay" to="." method="enable_submit"]
